distribution/base/facade-flow.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tavern-facade-flow
spec:
  type: ExternalName
  externalName: ""
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
