distribution/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tavern
spec:
  selector:
    app: tavern
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
